 * #1680 (QuadraticBasisFactory multiplies cross products by 2)
 * #1710 (Misleading y labels in VisualTest.DrawPairsMarginals())
 * #1713 (The doc of the ResourceMap does not match the content of the ResourceMap)
 * #1714 (The log-PDF of the Pareto is wrong)
 * #1721 (The `draw` method of `SobolSimulationAlgorithm` does not reuse the descriptions)
 * #1723 (There is no interesting example of the ExprTk feature of SymbolicFunction)
 * #1729 (LinearModelAnalysis sometimes fail)
 * #1731 (The Extreme value example may be improved)
 * #1737 (Low rank tensor doc issues)
 * #1742 (The example which shows how to set the figure size is wrong.)
 * #1752 (Error while estimating the reduced log-likelihood when using a StationaryFunctionalCovarianceModel)
 * #1759 (Kriging model with StationaryFunctionalCovarianceModel might provide bad results)
 * #1768 (Bug in ExponentiallyDampedCosineModel & SphericalModel)
 * #1771 (GridLayout hides the titles in the graph)
 * #1772 (MinimumVolumeClassifier cannot draw 1D samples)
 * #1774 (ExponentialModel::partialGradient is wrong)
 * #1775 (ExponentialModel does not account correlation with Covariance ctor)
 * #1776 (Typo in the Branin use case implementation)
 * #1781 (The link_to_an_external_code example has small bugs)
 * #1784 (The drawPDF method of Histogram sometimes fail)
 * #1787 (CovarianceMatrix from SymmetricMatrix raises InvalidArgumentException)
 * #1790 (LinearModelResult.getFormula() method is not updated by Stepwise regression)
 * #1794 (Some doc examples seem to behave with new infrastructure)
 * #1796 (VonMisesFactory is missing)
 * #1803 (The API example of Experiment has a format issue)
 * #1805 (Brent's implementation has a stability issue)
 * #1807 (Beta::computeCharacteristicFunction is wrong if the lower bound is not zero)


== 1.16 release (2020-11-16) == #release-1.16

=== Library ===

==== Major changes ====
 * Drop normalization in KrigingAlgorithm